@@ -126,8 +126,6 @@ importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
 importFrom(data.table,copy)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
