@@ -1,0 +1,4 @@
+library(testthat)
+library(polmineR)
+
+test_check("polmineR")
