@@ -14,6 +14,8 @@ output to RStudio viewer
 * functionality of meta-method merged into sAttributes-method (meta-method dropped)
 * speed improvements for generating html output for reading
 * previously unexported highlight-method now exported, and more robust than before (using xml2)
+* progress bars for multicore operations now generated by pbapply package
+* starting to use testthat for unit testing
 
 v0.7.2
 * updated documentation of partition-method.
